# termination

./: .gitignore  CMakeLists.txt  README.md  commands.txt
benchmarks/seed/: mains.tgz
inputs/: input-init-func-nonterminating.c  input-init-func-terminating.c  input-init-func-unable.c  input0.c  input2.c  input3.2.c  invalid.c  nonterminating.c  nonterminating3.c  seed1.c  seed2.c  seed3.c  terminating.c  unable.c
passes/catch-main/: CMakeLists.txt  catch-main.cpp
passes/filter-programs/: CMakeLists.txt  filter-programs.cpp
passes/hello-world/: CMakeLists.txt  HelloWorld.cpp
passes/nested-loop-counter/: CMakeLists.txt  nested-loop-counter.cpp
passes/op-counter/: CMakeLists.txt  op-counter.cpp
results/: results-530-seed.ipynb  results.ipynb
scripts/: bench.sh  catch-main.sh  classify.sh  clear.sh  progress-bar.sh  test.sh  tmp.bc  tmp.rbc
scripts/ultimate/config/: AutomizerTermination.xml
scripts/ultimate/configuration/org.eclipse.core.runtime/: .contributors.1  .mainData.1  .table.1
scripts/ultimate/configuration/org.eclipse.core.runtime/.manager/: .fileTable.7
scripts/ultimate/configuration/org.eclipse.osgi/: framework.info.1
scripts/ultimate/configuration/org.eclipse.osgi/.manager/: .fileTable.1
scripts/ultimate/p2/org.eclipse.equinox.p2.core/cache/: artifacts.xml
scripts/ultimate/p2/org.eclipse.equinox.p2.core/cache/binary/: CLI-E4.executable.gtk.linux.x86_64_0.1.25
scripts/ultimate/p2/org.eclipse.equinox.p2.engine/profileRegistry/DefaultProfile.profile/.data/org.eclipse.equinox.internal.p2.touchpoint.eclipse.actions/: jvmargs
ultimate/: Ultimate.ini  Ultimate.py  artifacts.xml
ultimate/config/: AutomizerTermination.xml
ultimate/configuration/: config.ini
ultimate/configuration/org.eclipse.core.runtime/: .contributions.1  .extraData.1  .namespaces.1
ultimate/configuration/org.eclipse.core.runtime/.manager/: .fileTable.7  .fileTable.8
ultimate/configuration/org.eclipse.osgi/: framework.info.1
ultimate/configuration/org.eclipse.osgi/.manager/: .fileTable.1  .fileTable.2
ultimate/configuration/org.eclipse.update/: platform.xml
ultimate/features/BA_FeatureDependenciesCommandlineE4_0.1.25/: feature.xml
ultimate/features/BA_FeatureUltimateCommandLine_0.1.25/: feature.xml
ultimate/features/BA_FeatureUltimateCommon_0.1.25/: feature.xml
